--- a/VoiceAlarm/N76E003_BSP_Keil_C51_V1.0.6/Sample_Code/Pin_Interrupt/Output/Pin_Int.build_log.htm
+++ b/VoiceAlarm/N76E003_BSP_Keil_C51_V1.0.6/Sample_Code/Pin_Interrupt/Output/Pin_Int.build_log.htm
@@ -31,9 +31,13 @@ compiling Common.c...
 compiling Delay.c...
 assembling STARTUP.A51...
 linking...
-Program Size: data=46.1 xdata=0 code=1427
+*** WARNING L15: MULTIPLE CALL TO SEGMENT
+    SEGMENT: ?PR?_TIMER0_DELAY1MS?DELAY
+    CALLER1: ?PR?PININTERRUPT_ISR?PIN_INT
+    CALLER2: ?C_C51STARTUP
+Program Size: data=52.1 xdata=0 code=1583
 creating hex file from ".\Output\Pin_Int"...
-".\Output\Pin_Int" - 0 Error(s), 0 Warning(s).
+".\Output\Pin_Int" - 0 Error(s), 1 Warning(s).
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
